Fixed alignment issues with the screen and changed the displayNumber function

--- a/style.css
+++ b/style.css
@@ -28,10 +28,6 @@ body {
 }
 
 .calcScreen {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
     width: 400px;
     height: 100px;
     text-align: right;
